// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StageStatCard does not render Start and End Point for Stage with less than two Locations 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#7e7e7e",
      "borderRadius": 8,
      "borderWidth": 0,
      "elevation": 3,
      "marginBottom": 15,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "height": 0,
      }
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
        }
      }
    >
      <Text
        appearance="default"
        category="h5"
        status="basic"
        style={
          [
            {
              "color": "#000000",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "marginBottom": 10,
              "marginLeft": 15,
              "marginTop": 10,
            },
          ]
        }
      >
        Statistiken
      </Text>
      <Text
        appearance="hint"
        category="p1"
        status="basic"
        style={
          [
            {
              "color": "#494949",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
            },
            {
              "fontSize": 18,
              "marginLeft": 10,
            },
          ]
        }
      >
        vom 
        03.12.2024
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "minWidth": 40,
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 12,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <View
    appearance="default"
    style={
      [
        {
          "backgroundColor": "#b8b8b8",
          "height": 1,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "flexShrink": 1,
        },
        {
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "gap": 3,
          "justifyContent": "space-between",
          "marginTop": 15,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text />
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          42.2 km
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text />
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          7h 21m
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text />
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          5.7 km/h
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`StageStatCard renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#7e7e7e",
      "borderRadius": 8,
      "borderWidth": 0,
      "elevation": 3,
      "marginBottom": 15,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "height": 0,
      }
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
        }
      }
    >
      <Text
        appearance="default"
        category="h5"
        status="basic"
        style={
          [
            {
              "color": "#000000",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "marginBottom": 10,
              "marginLeft": 15,
              "marginTop": 10,
            },
          ]
        }
      >
        Statistiken
      </Text>
      <Text
        appearance="hint"
        category="p1"
        status="basic"
        style={
          [
            {
              "color": "#494949",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
            },
            {
              "fontSize": 18,
              "marginLeft": 10,
            },
          ]
        }
      >
        vom 
        01.12.2024
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "minWidth": 40,
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 12,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FF6E14",
                "fontSize": 20,
              },
              {
                "marginHorizontal": 10,
                "width": "auto",
              },
              {
                "fontFamily": "FontAwesome6Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {
                "fontWeight": "900",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    appearance="default"
    style={
      [
        {
          "backgroundColor": "#b8b8b8",
          "height": 1,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "flexShrink": 1,
        },
        {
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 6,
            "gap": 7,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
          testID="container"
        >
          <View
            collapsable={false}
            style={
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 23,
                  },
                  {
                    "color": "#494949",
                    "width": 25,
                  },
                  {
                    "fontFamily": "FontAwesome6Free-Regular",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {
                    "fontWeight": "400",
                  },
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            appearance="default"
            category="p1"
            status="basic"
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                {
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "marginLeft": 8,
                },
              ]
            }
          >
            Startpunkt
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
          testID="container"
        >
          <View
            collapsable={false}
            style={
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 23,
                  },
                  {
                    "color": "#494949",
                    "width": 25,
                  },
                  {
                    "fontFamily": "FontAwesome6Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {
                    "fontWeight": "900",
                  },
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            appearance="default"
            category="p1"
            status="basic"
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontSize": 15,
                  "fontWeight": "400",
                },
                {
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "marginLeft": 8,
                },
              ]
            }
          >
            Endpunkt
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          appearance="hint"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#494949",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "fontSize": 17,
                "textAlign": "right",
              },
            ]
          }
        >
          10:28
        </Text>
        <Text
          appearance="hint"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#494949",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "fontSize": 17,
                "textAlign": "right",
              },
            ]
          }
        >
          17:43
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 3,
          "justifyContent": "space-between",
          "marginTop": 15,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 22,
                },
                {
                  "color": "#FF6E14",
                  "width": "auto",
                },
                {
                  "fontFamily": "FontAwesome6Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {
                  "fontWeight": "900",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          79.3 km
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 22,
                },
                {
                  "color": "#FF6E14",
                  "width": "auto",
                },
                {
                  "fontFamily": "FontAwesome6Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {
                  "fontWeight": "900",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          7h 15m
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
        testID="container"
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 22,
                },
                {
                  "color": "#FF6E14",
                  "width": "auto",
                },
                {
                  "fontFamily": "FontAwesome6Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {
                  "fontWeight": "900",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          appearance="default"
          category="p1"
          status="basic"
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              {
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          10.9 km/h
        </Text>
      </View>
    </View>
  </View>
</View>
`;
